<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="bytes">
        <item>Byte</item>
        <item>KB</item>
        <item>MB</item>
        <item>GB</item>
        <item>TB</item>
    </string-array>
    <string-array name="bitpersec">
        <item>b/s</item>
        <item>Kb/s</item>
        <item>Mb/s</item>
        <item>Gb/s</item>
        <item>B/s</item>
        <item>KB/s</item>
        <item>MB/s</item>
        <item>GB/s</item>
    </string-array>
    <string name="app_name">TTime</string>
    <string name="data">Data :</string>
    <string name="bandwidth">Bandwidth :</string>
    <string name="radio1">Calculate transfer time</string>
    <string name="radio2">Calculate data quantity</string>
    <string name="radio3">Calculate bandwidth</string>
    <string name="Days">Days</string>
    <string name="Hours">Hours</string>
    <string name="Minutes">Minutes</string>
    <string name="Seconds">Seconds</string>
    <string name="Clear">Clear</string>
    <string name="MoreThan0">Please enter a value greater than zero</string>
</resources>