<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="384dp"
        android:layout_height="101dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06">

        <RadioButton
            android:id="@+id/transferTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio1"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/dataQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/bandwidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio3"
            android:textSize="16sp" />

    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-64dp" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/editTextBandwidth"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:text="0.00"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:entries="@array/bitpersec"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextBandwidth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toEndOf="@+id/editTextBandwidth" />

    <TextView
        android:id="@+id/nbrMops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textSize="17sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextData"
        app:layout_constraintEnd_toStartOf="@+id/editTextData"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:entries="@array/bytes"
        android:spinnerMode="dropdown"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="@+id/editTextData" />

    <EditText
        android:id="@+id/editTextData"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:text="0.00"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <TextView
        android:id="@+id/nbrGo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:text="@string/bandwidth"
        android:textSize="17sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextBandwidth"
        app:layout_constraintEnd_toStartOf="@+id/editTextBandwidth"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent" />

    <TableRow
        android:layout_width="410dp"
        android:layout_height="52dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27">

        <EditText
            android:id="@+id/daysTF"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Days"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/hoursTF"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hours"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/minutesTF"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Minutes"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/secondsTF"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:text="0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Seconds"
            android:textSize="17sp" />

    </TableRow>


</androidx.constraintlayout.widget.ConstraintLayout>